// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application component Should display mobile correctly 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    mediaQueryList.addEventListener is not a function
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: mediaQueryList.addEventListener is not a function
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@mui/system/useMediaQuery/useMediaQuery.js:71:22
    at subscribeToStore (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:16139:10)
    at commitHookEffectListMount (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:23189:26)
    at commitPassiveMountOnFiber (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24970:11)
    at commitPassiveMountEffects_complete (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24930:9)
    at commitPassiveMountEffects_begin (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24917:7)
    at commitPassiveMountEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24905:3)
    at flushPassiveEffectsImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27078:3)
    at flushPassiveEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27023:14)
    at performSyncWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26115:3)
    at flushSyncCallbacks (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at commitRootImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26998:3)
    at commitRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26721:5)
    at finishConcurrentRender (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26020:9)
    at performConcurrentWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:25848:7)
    at flushActQueue (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2667:24)
    at act (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2582:11)
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/act-compat.js:47:25
    at renderRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:190:26)
    at render (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:292:10)
    at renderMethod (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:43:12)
    at Object.setup (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:491:31)
    at Promise.then.completed (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Application component redirects user to login if going to a secure file url and not user logged in yet 1`] = `
<div>
  <div />
</div>
`;

exports[`Application component should render alert if user is not fez author 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    mediaQueryList.addEventListener is not a function
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: mediaQueryList.addEventListener is not a function
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@mui/system/useMediaQuery/useMediaQuery.js:71:22
    at subscribeToStore (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:16139:10)
    at commitHookEffectListMount (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:23189:26)
    at commitPassiveMountOnFiber (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24970:11)
    at commitPassiveMountEffects_complete (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24930:9)
    at commitPassiveMountEffects_begin (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24917:7)
    at commitPassiveMountEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24905:3)
    at flushPassiveEffectsImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27078:3)
    at flushPassiveEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27023:14)
    at performSyncWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26115:3)
    at flushSyncCallbacks (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at commitRootImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26998:3)
    at commitRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26721:5)
    at finishConcurrentRender (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26020:9)
    at performConcurrentWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:25848:7)
    at flushActQueue (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2667:24)
    at act (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2582:11)
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/act-compat.js:47:25
    at renderRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:190:26)
    at render (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:292:10)
    at renderMethod (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:43:12)
    at Object.setup (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:101:31)
    at Promise.then.completed (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Application component should render app for HDR with ORCID ID 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    mediaQueryList.addEventListener is not a function
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: mediaQueryList.addEventListener is not a function
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@mui/system/useMediaQuery/useMediaQuery.js:71:22
    at subscribeToStore (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:16139:10)
    at commitHookEffectListMount (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:23189:26)
    at commitPassiveMountOnFiber (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24970:11)
    at commitPassiveMountEffects_complete (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24930:9)
    at commitPassiveMountEffects_begin (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24917:7)
    at commitPassiveMountEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24905:3)
    at flushPassiveEffectsImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27078:3)
    at flushPassiveEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27023:14)
    at performSyncWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26115:3)
    at flushSyncCallbacks (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at commitRootImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26998:3)
    at commitRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26721:5)
    at finishConcurrentRender (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26020:9)
    at performConcurrentWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:25848:7)
    at flushActQueue (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2667:24)
    at act (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2582:11)
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/act-compat.js:47:25
    at renderRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:190:26)
    at render (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:292:10)
    at renderMethod (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:43:12)
    at Object.setup (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:136:31)
    at Promise.then.completed (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Application component should render app for account with fez author with ORCID ID 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    mediaQueryList.addEventListener is not a function
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: mediaQueryList.addEventListener is not a function
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@mui/system/useMediaQuery/useMediaQuery.js:71:22
    at subscribeToStore (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:16139:10)
    at commitHookEffectListMount (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:23189:26)
    at commitPassiveMountOnFiber (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24970:11)
    at commitPassiveMountEffects_complete (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24930:9)
    at commitPassiveMountEffects_begin (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24917:7)
    at commitPassiveMountEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24905:3)
    at flushPassiveEffectsImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27078:3)
    at flushPassiveEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27023:14)
    at performSyncWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26115:3)
    at flushSyncCallbacks (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at commitRootImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26998:3)
    at commitRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26721:5)
    at finishConcurrentRender (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26020:9)
    at performConcurrentWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:25848:7)
    at flushActQueue (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2667:24)
    at act (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2582:11)
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/act-compat.js:47:25
    at renderRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:190:26)
    at render (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:292:10)
    at renderMethod (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:43:12)
    at Object.setup (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:109:31)
    at Promise.then.completed (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Application component should render application with routing for the user and display loading screen while loading author 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-3v7gdf-MuiGridLegacy-root"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed AppBar mui-fixed css-143xtdc-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1g7rp8r-MuiToolbar-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 MuiGridLegacy-wrap-xs-nowrap css-14ffgos-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <button
              aria-label="Click to open the main navigation"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="main-menu-button"
              data-mui-internal-clone-element="true"
              id="main-menu-button"
              style="margin-left: -12px; margin-right: 12px;"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="MenuIcon"
                focusable="false"
                style="color: white;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
                />
              </svg>
            </button>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
            style="padding-left: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 MuiGridLegacy-wrap-xs-nowrap css-1r3rcmk-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-dr85pc-MuiGridLegacy-root"
              >
                <div
                  class="smallLogo"
                  id="logo"
                  style="height: 66px; width: 60px;"
                >
                  The University of Queensland
                </div>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
                style="overflow: hidden; text-overflow: ellipsis;"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap css-16qo8ib-MuiTypography-root"
                >
                  <a
                    class="appTitle"
                    href="/"
                    style="color: rgb(255, 255, 255);"
                    title="Click to return to the eSpace home page"
                  >
                    UQ eSpace 
                  </a>
                </h1>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-4 css-znka4g-MuiGridLegacy-root"
          >
            <form
              style="margin: 8px;"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 MuiGridLegacy-wrap-xs-nowrap css-u2adcn-MuiGridLegacy-root"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-910rr7-MuiGridLegacy-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16nhll4-MuiSvgIcon-root"
                    data-testid="SearchIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                    />
                  </svg>
                </div>
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-cvf7hw-MuiGridLegacy-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                    data-testid="simple-search"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-u5cuqz-MuiInputBase-root-MuiInput-root"
                    >
                      <input
                        aria-invalid="false"
                        aria-label=""
                        autocomplete="search"
                        class="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch css-v8l2vu-MuiInputBase-input-MuiInput-input"
                        data-analyticsid="simple-search-input"
                        data-testid="simple-search-input"
                        id="simple-search-input"
                        label=""
                        placeholder="Search eSpace"
                        type="search"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root css-10q9jzs"
              >
                <button
                  aria-label="Click to search eSpace"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  data-mui-internal-clone-element="true"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ixlo85-MuiSvgIcon-root"
                    data-testid="SearchIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                    />
                  </svg>
                </button>
              </div>
            </form>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
          >
            <div
              class="auth-button-wrapper"
            >
              <button
                aria-label="Log out - undefined"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge log-out-button css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-q9efh0-MuiSvgIcon-root"
                  data-testid="PersonIcon"
                  focusable="false"
                  id="logged-in-icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      class="content-container"
      id="content-container"
    >
      <button
        aria-label="Scroll to top of page"
        class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-secondary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-secondary css-y8819u-MuiButtonBase-root-MuiFab-root"
        id="scrolltopbtn"
        tabindex="0"
        title="Scroll to top of page"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="ArrowUpwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
          />
        </svg>
      </button>
      <div
        aria-label="eSpace alerts"
        role="region"
        style="padding-bottom: 24px;"
      >
        <alert-list
          system="espace"
        />
      </div>
      <span
        class="MuiBox-root css-0"
        data-testid="confirmDialogBox"
      />
      <div
        style="padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
            style="text-align: center;"
          >
            <span
              aria-label="Loading"
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
              role="progressbar"
              style="width: 18px; height: 18px;"
            >
              <svg
                class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="21"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
            style="text-align: center;"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
              style="font-size: 1.33rem;"
            >
              Loading account
            </span>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
          />
        </div>
      </div>
    </div>
    <div
      class="offlineSnackbar"
    />
  </div>
</div>
`;

exports[`Application component should render for anon user 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    mediaQueryList.addEventListener is not a function
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: mediaQueryList.addEventListener is not a function
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@mui/system/useMediaQuery/useMediaQuery.js:71:22
    at subscribeToStore (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:16139:10)
    at commitHookEffectListMount (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:23189:26)
    at commitPassiveMountOnFiber (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24970:11)
    at commitPassiveMountEffects_complete (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24930:9)
    at commitPassiveMountEffects_begin (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24917:7)
    at commitPassiveMountEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:24905:3)
    at flushPassiveEffectsImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27078:3)
    at flushPassiveEffects (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:27023:14)
    at performSyncWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26115:3)
    at flushSyncCallbacks (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at commitRootImpl (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26998:3)
    at commitRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26721:5)
    at finishConcurrentRender (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:26020:9)
    at performConcurrentWorkOnRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react-dom/cjs/react-dom.development.js:25848:7)
    at flushActQueue (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2667:24)
    at act (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/react/cjs/react.development.js:2582:11)
    at /Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/act-compat.js:47:25
    at renderRoot (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:190:26)
    at render (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/@testing-library/react/dist/pure.js:292:10)
    at renderMethod (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:43:12)
    at Object.setup (/Users/uqlsibba/Developer/Projects/fez-frontend/src/modules/App/components/App.test.js:87:31)
    at Promise.then.completed (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/uqlsibba/Developer/Projects/fez-frontend/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Application component should render loading screen while account is loading 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-3v7gdf-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-zeroMinWidth MuiGridLegacy-grid-xs-12 css-81rso6-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-1tn8p30-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item css-ejcx5-MuiGridLegacy-root"
        >
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jb97hd-MuiCircularProgress-root"
            role="progressbar"
            style="width: 80px; height: 80px;"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="21.5"
                stroke-width="1"
              />
            </svg>
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item css-ejcx5-MuiGridLegacy-root"
        >
          <div
            alt="The University of Queensland"
            class="largeLogo MuiBox-root css-1domaf0"
          />
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item css-ejcx5-MuiGridLegacy-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-12tzrfb-MuiTypography-root"
          >
            UQ eSpace 
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Application component should render thesis submission for HDR without menu 1`] = `undefined`;
